--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -7,24 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>457</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Paint++</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QColumnView" name="columnView">
-    <property name="geometry">
-     <rect>
-      <x>-10</x>
-      <y>-10</y>
-      <width>811</width>
-      <height>91</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="Paste">
+   <widget class="QPushButton" name="open">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -33,31 +23,40 @@
       <height>61</height>
      </rect>
     </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="cut">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>20</y>
-      <width>51</width>
-      <height>21</height>
-     </rect>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/PaintIcons/open.png);</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="copy">
+   <widget class="QPushButton" name="save">
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>50</y>
-      <width>51</width>
-      <height>21</height>
+      <y>10</y>
+      <width>41</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/PaintIcons/save.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="magicSelect">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>40</y>
+      <width>41</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/PaintIcons/magicselect.png);</string>
     </property>
     <property name="text">
      <string/>
@@ -66,11 +65,14 @@
    <widget class="QPushButton" name="select">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>130</x>
       <y>10</y>
       <width>61</width>
       <height>61</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/PaintIcons/select.png);</string>
     </property>
     <property name="text">
      <string/>
@@ -79,11 +81,14 @@
    <widget class="QPushButton" name="pen">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>200</x>
       <y>10</y>
       <width>61</width>
       <height>61</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/PaintIcons/pencil.png);</string>
     </property>
     <property name="text">
      <string/>
@@ -92,11 +97,14 @@
    <widget class="QPushButton" name="pencil">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>270</x>
       <y>10</y>
       <width>61</width>
       <height>61</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/PaintIcons/pen.png);</string>
     </property>
     <property name="text">
      <string/>
@@ -105,7 +113,7 @@
    <widget class="QScrollArea" name="Grosor">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>340</x>
       <y>10</y>
       <width>71</width>
       <height>61</height>
@@ -128,7 +136,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>61</width>
+        <width>21</width>
         <height>22</height>
        </rect>
       </property>
@@ -141,7 +149,7 @@
        <rect>
         <x>0</x>
         <y>20</y>
-        <width>61</width>
+        <width>21</width>
         <height>22</height>
        </rect>
       </property>
@@ -154,7 +162,7 @@
        <rect>
         <x>0</x>
         <y>40</y>
-        <width>61</width>
+        <width>21</width>
         <height>22</height>
        </rect>
       </property>
@@ -162,14 +170,33 @@
        <string/>
       </property>
      </widget>
+     <widget class="QFrame" name="frame">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>-10</y>
+        <width>51</width>
+        <height>81</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border-image: url(:/PaintIcons/grosser.png);</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QGroupBox" name="color">
     <property name="geometry">
      <rect>
-      <x>430</x>
+      <x>420</x>
       <y>10</y>
-      <width>231</width>
+      <width>221</width>
       <height>61</height>
      </rect>
     </property>
@@ -362,14 +389,78 @@
      </property>
     </widget>
    </widget>
-   <widget class="QPushButton" name="pickcolor">
+   <widget class="QGroupBox" name="figures">
     <property name="geometry">
      <rect>
-      <x>670</x>
+      <x>700</x>
       <y>10</y>
       <width>41</width>
-      <height>31</height>
+      <height>61</height>
      </rect>
+    </property>
+    <property name="title">
+     <string/>
+    </property>
+    <widget class="QPushButton" name="circle">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>40</y>
+       <width>41</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">image: url(:/PaintIcons/circle.png);</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="triangle">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>20</y>
+       <width>41</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">image: url(:/PaintIcons/triangle.png);</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="square">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>41</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">image: url(:/PaintIcons/square.png);</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QPushButton" name="filter">
+    <property name="geometry">
+     <rect>
+      <x>750</x>
+      <y>20</y>
+      <width>31</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/PaintIcons/filter.png);</string>
     </property>
     <property name="text">
      <string/>
@@ -378,68 +469,58 @@
    <widget class="QPushButton" name="paintfill">
     <property name="geometry">
      <rect>
-      <x>670</x>
+      <x>650</x>
       <y>40</y>
       <width>41</width>
-      <height>34</height>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/PaintIcons/bucket.png);</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QGroupBox" name="figures">
+   <widget class="QPushButton" name="pickcolor">
     <property name="geometry">
      <rect>
-      <x>720</x>
+      <x>650</x>
       <y>10</y>
-      <width>71</width>
-      <height>61</height>
+      <width>41</width>
+      <height>31</height>
      </rect>
     </property>
-    <property name="title">
+    <property name="styleSheet">
+     <string notr="true">image: url(:/PaintIcons/dropper.png);</string>
+    </property>
+    <property name="text">
      <string/>
     </property>
-    <widget class="QPushButton" name="cuadrado">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>71</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="circulo">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>40</y>
-       <width>71</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="triangulo">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>20</y>
-       <width>71</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
    </widget>
+   <widget class="QColumnView" name="columnView">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>801</width>
+      <height>91</height>
+     </rect>
+    </property>
+   </widget>
+   <zorder>columnView</zorder>
+   <zorder>open</zorder>
+   <zorder>save</zorder>
+   <zorder>magicSelect</zorder>
+   <zorder>select</zorder>
+   <zorder>pen</zorder>
+   <zorder>pencil</zorder>
+   <zorder>Grosor</zorder>
+   <zorder>color</zorder>
+   <zorder>figures</zorder>
+   <zorder>filter</zorder>
+   <zorder>paintfill</zorder>
+   <zorder>pickcolor</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
