--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -6,9 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>457</height>
+    <width>1300</width>
+    <height>1000</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1299</width>
+    <height>999</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1300</width>
+    <height>1000</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Paint++</string>
@@ -127,8 +145,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>67</width>
-       <height>57</height>
+       <width>69</width>
+       <height>59</height>
       </rect>
      </property>
      <widget class="QRadioButton" name="G1">
