--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -118,7 +118,7 @@
    <widget class="QPushButton" name="pencilButton">
     <property name="geometry">
      <rect>
-      <x>410</x>
+      <x>490</x>
       <y>10</y>
       <width>61</width>
       <height>61</height>
@@ -139,7 +139,7 @@
    <widget class="QScrollArea" name="ticknessScrollArea">
     <property name="geometry">
      <rect>
-      <x>550</x>
+      <x>630</x>
       <y>10</y>
       <width>71</width>
       <height>61</height>
@@ -168,6 +168,9 @@
       </property>
       <property name="text">
        <string/>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
       </property>
      </widget>
      <widget class="QRadioButton" name="tickness2Button">
@@ -229,64 +232,11 @@
     <property name="title">
      <string/>
     </property>
-    <widget class="QPushButton" name="rectangleButton">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>40</y>
-       <width>41</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>6</pointsize>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true"/>
-     </property>
-     <property name="text">
-      <string>Rectangle</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="triangleButton">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>20</y>
-       <width>41</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">image: url(:/PaintIcons/triangle.png);</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="squareButton">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>41</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">image: url(:/PaintIcons/square.png);</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
    </widget>
-   <widget class="QPushButton" name="filter1Button">
+   <widget class="QPushButton" name="filterBButton">
     <property name="geometry">
      <rect>
-      <x>750</x>
+      <x>830</x>
       <y>20</y>
       <width>31</width>
       <height>41</height>
@@ -303,7 +253,7 @@ background-color: rgb(0,0,255);</string>
    <widget class="QPushButton" name="paintfillButton">
     <property name="geometry">
      <rect>
-      <x>650</x>
+      <x>730</x>
       <y>40</y>
       <width>41</width>
       <height>31</height>
@@ -319,7 +269,7 @@ background-color: rgb(0,0,255);</string>
    <widget class="QPushButton" name="pickColorButton">
     <property name="geometry">
      <rect>
-      <x>650</x>
+      <x>730</x>
       <y>10</y>
       <width>41</width>
       <height>31</height>
@@ -337,7 +287,7 @@ background-color: rgb(0,0,255);</string>
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>881</width>
+      <width>961</width>
       <height>91</height>
      </rect>
     </property>
@@ -390,10 +340,10 @@ background-color: rgb(0,0,255);</string>
      <string>Redo</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="filter2Button">
+   <widget class="QPushButton" name="filterGButton">
     <property name="geometry">
      <rect>
-      <x>790</x>
+      <x>870</x>
       <y>20</y>
       <width>31</width>
       <height>41</height>
@@ -407,10 +357,10 @@ background-color: rgb(0,255,0);</string>
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="filter3Button">
+   <widget class="QPushButton" name="filterRButton">
     <property name="geometry">
      <rect>
-      <x>830</x>
+      <x>910</x>
       <y>20</y>
       <width>31</width>
       <height>41</height>
@@ -427,7 +377,7 @@ background-color: rgb(255,0,0);</string>
    <widget class="QPushButton" name="chooseColorButton">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>560</x>
       <y>10</y>
       <width>61</width>
       <height>61</height>
@@ -466,6 +416,80 @@ background-color: rgb(255,0,0);</string>
      <string>Free Chop</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="squareButton">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>10</y>
+      <width>41</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/PaintIcons/square.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="rectangleButton">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>50</y>
+      <width>41</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>6</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>Rectangle</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="triangleButton">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>30</y>
+      <width>41</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/PaintIcons/triangle.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="lineButton">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>10</y>
+      <width>61</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>Line</string>
+    </property>
+   </widget>
    <zorder>menuColumnView</zorder>
    <zorder>openButton</zorder>
    <zorder>saveButton</zorder>
@@ -475,15 +499,19 @@ background-color: rgb(255,0,0);</string>
    <zorder>pencilButton</zorder>
    <zorder>ticknessScrollArea</zorder>
    <zorder>figuresGroupBox</zorder>
-   <zorder>filter1Button</zorder>
+   <zorder>filterBButton</zorder>
    <zorder>paintfillButton</zorder>
    <zorder>pickColorButton</zorder>
    <zorder>undoButton</zorder>
    <zorder>redoButton</zorder>
-   <zorder>filter2Button</zorder>
-   <zorder>filter3Button</zorder>
+   <zorder>filterGButton</zorder>
+   <zorder>filterRButton</zorder>
    <zorder>chooseColorButton</zorder>
    <zorder>chopFreeButton</zorder>
+   <zorder>squareButton</zorder>
+   <zorder>rectangleButton</zorder>
+   <zorder>triangleButton</zorder>
+   <zorder>lineButton</zorder>
   </widget>
  </widget>
  <resources/>
