--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -287,7 +287,7 @@ background-color: rgb(0,0,255);</string>
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>961</width>
+      <width>1041</width>
       <height>91</height>
      </rect>
     </property>
@@ -490,6 +490,27 @@ background-color: rgb(255,0,0);</string>
      <string>Line</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="rotateButton">
+    <property name="geometry">
+     <rect>
+      <x>960</x>
+      <y>10</y>
+      <width>61</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>Rotate</string>
+    </property>
+   </widget>
    <zorder>menuColumnView</zorder>
    <zorder>openButton</zorder>
    <zorder>saveButton</zorder>
@@ -512,6 +533,7 @@ background-color: rgb(255,0,0);</string>
    <zorder>rectangleButton</zorder>
    <zorder>triangleButton</zorder>
    <zorder>lineButton</zorder>
+   <zorder>rotateButton</zorder>
   </widget>
  </widget>
  <resources/>
