--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -447,10 +447,10 @@ background-color: rgb(255,0,0);</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">image: url(:/PaintIcons/triangle.png);</string>
     </property>
     <property name="text">
-     <string>Rectangle</string>
+     <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="triangleButton">
@@ -462,11 +462,16 @@ background-color: rgb(255,0,0);</string>
       <height>21</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>5</pointsize>
+     </font>
+    </property>
     <property name="styleSheet">
-     <string notr="true">image: url(:/PaintIcons/triangle.png);</string>
+     <string notr="true"/>
     </property>
     <property name="text">
-     <string/>
+     <string>Rectangle</string>
     </property>
    </widget>
    <widget class="QPushButton" name="lineButton">
